# Nadir

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  benchmarker.cpp  sort.cpp  sort.hpp
include/nadir/: benchmarker.hpp  choose.hpp  nadir.hpp
